lab1/y.output
Grammar

    0 $accept: program $end

    1 program: tokens

    2 tokens: tokens token
    3       | /* empty */

    4 token: TOKEN_INT
    5      | TOKEN_FLOAT
    6      | TOKEN_BOOL
    7      | TOKEN_TYPE
    8      | TOKEN_ID
    9      | TOKEN_ASSIGN
   10      | TOKEN_PLUS
   11      | TOKEN_MINUS
   12      | TOKEN_MUL
   13      | TOKEN_DIV
   14      | TOKEN_EXP
   15      | TOKEN_NOT
   16      | TOKEN_AND
   17      | TOKEN_OR
   18      | TOKEN_EQ
   19      | TOKEN_NE
   20      | TOKEN_GT
   21      | TOKEN_LT
   22      | TOKEN_GTE
   23      | TOKEN_LTE
   24      | TOKEN_O_SQ_BRKT
   25      | TOKEN_C_SQ_BRKT
   26      | TOKEN_O_RD_BRKT
   27      | TOKEN_C_RD_BRKT
   28      | TOKEN_O_CURLY
   29      | TOKEN_C_CURLY
   30      | TOKEN_COMMA
   31      | TOKEN_SEMICOLON
   32      | TOKEN_NEWLINE
   33      | TOKEN_CONST
   34      | TOKEN_IF
   35      | TOKEN_ELSE
   36      | TOKEN_WHILE


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_INT (258) 4
TOKEN_FLOAT (259) 5
TOKEN_BOOL (260) 6
TOKEN_TYPE (261) 7
TOKEN_ID (262) 8
TOKEN_ASSIGN (263) 9
TOKEN_PLUS (264) 10
TOKEN_MINUS (265) 11
TOKEN_MUL (266) 12
TOKEN_DIV (267) 13
TOKEN_EXP (268) 14
TOKEN_NOT (269) 15
TOKEN_AND (270) 16
TOKEN_OR (271) 17
TOKEN_EQ (272) 18
TOKEN_NE (273) 19
TOKEN_GT (274) 20
TOKEN_LT (275) 21
TOKEN_GTE (276) 22
TOKEN_LTE (277) 23
TOKEN_O_SQ_BRKT (278) 24
TOKEN_C_SQ_BRKT (279) 25
TOKEN_O_RD_BRKT (280) 26
TOKEN_C_RD_BRKT (281) 27
TOKEN_O_CURLY (282) 28
TOKEN_C_CURLY (283) 29
TOKEN_COMMA (284) 30
TOKEN_SEMICOLON (285) 31
TOKEN_NEWLINE (286) 32
TOKEN_CONST (287) 33
TOKEN_IF (288) 34
TOKEN_ELSE (289) 35
TOKEN_WHILE (290) 36


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
tokens (38)
    on left: 2 3, on right: 1 2
token (39)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36, on right: 2


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (tokens)

    program  go to state 1
    tokens   go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: tokens .
    2 tokens: tokens . token

    TOKEN_INT        shift, and go to state 4
    TOKEN_FLOAT      shift, and go to state 5
    TOKEN_BOOL       shift, and go to state 6
    TOKEN_TYPE       shift, and go to state 7
    TOKEN_ID         shift, and go to state 8
    TOKEN_ASSIGN     shift, and go to state 9
    TOKEN_PLUS       shift, and go to state 10
    TOKEN_MINUS      shift, and go to state 11
    TOKEN_MUL        shift, and go to state 12
    TOKEN_DIV        shift, and go to state 13
    TOKEN_EXP        shift, and go to state 14
    TOKEN_NOT        shift, and go to state 15
    TOKEN_AND        shift, and go to state 16
    TOKEN_OR         shift, and go to state 17
    TOKEN_EQ         shift, and go to state 18
    TOKEN_NE         shift, and go to state 19
    TOKEN_GT         shift, and go to state 20
    TOKEN_LT         shift, and go to state 21
    TOKEN_GTE        shift, and go to state 22
    TOKEN_LTE        shift, and go to state 23
    TOKEN_O_SQ_BRKT  shift, and go to state 24
    TOKEN_C_SQ_BRKT  shift, and go to state 25
    TOKEN_O_RD_BRKT  shift, and go to state 26
    TOKEN_C_RD_BRKT  shift, and go to state 27
    TOKEN_O_CURLY    shift, and go to state 28
    TOKEN_C_CURLY    shift, and go to state 29
    TOKEN_COMMA      shift, and go to state 30
    TOKEN_SEMICOLON  shift, and go to state 31
    TOKEN_NEWLINE    shift, and go to state 32
    TOKEN_CONST      shift, and go to state 33
    TOKEN_IF         shift, and go to state 34
    TOKEN_ELSE       shift, and go to state 35
    TOKEN_WHILE      shift, and go to state 36

    $default  reduce using rule 1 (program)

    token  go to state 37


state 3

    0 $accept: program $end .

    $default  accept


state 4

    4 token: TOKEN_INT .

    $default  reduce using rule 4 (token)


state 5

    5 token: TOKEN_FLOAT .

    $default  reduce using rule 5 (token)


state 6

    6 token: TOKEN_BOOL .

    $default  reduce using rule 6 (token)


state 7

    7 token: TOKEN_TYPE .

    $default  reduce using rule 7 (token)


state 8

    8 token: TOKEN_ID .

    $default  reduce using rule 8 (token)


state 9

    9 token: TOKEN_ASSIGN .

    $default  reduce using rule 9 (token)


state 10

   10 token: TOKEN_PLUS .

    $default  reduce using rule 10 (token)


state 11

   11 token: TOKEN_MINUS .

    $default  reduce using rule 11 (token)


state 12

   12 token: TOKEN_MUL .

    $default  reduce using rule 12 (token)


state 13

   13 token: TOKEN_DIV .

    $default  reduce using rule 13 (token)


state 14

   14 token: TOKEN_EXP .

    $default  reduce using rule 14 (token)


state 15

   15 token: TOKEN_NOT .

    $default  reduce using rule 15 (token)


state 16

   16 token: TOKEN_AND .

    $default  reduce using rule 16 (token)


state 17

   17 token: TOKEN_OR .

    $default  reduce using rule 17 (token)


state 18

   18 token: TOKEN_EQ .

    $default  reduce using rule 18 (token)


state 19

   19 token: TOKEN_NE .

    $default  reduce using rule 19 (token)


state 20

   20 token: TOKEN_GT .

    $default  reduce using rule 20 (token)


state 21

   21 token: TOKEN_LT .

    $default  reduce using rule 21 (token)


state 22

   22 token: TOKEN_GTE .

    $default  reduce using rule 22 (token)


state 23

   23 token: TOKEN_LTE .

    $default  reduce using rule 23 (token)


state 24

   24 token: TOKEN_O_SQ_BRKT .

    $default  reduce using rule 24 (token)


state 25

   25 token: TOKEN_C_SQ_BRKT .

    $default  reduce using rule 25 (token)


state 26

   26 token: TOKEN_O_RD_BRKT .

    $default  reduce using rule 26 (token)


state 27

   27 token: TOKEN_C_RD_BRKT .

    $default  reduce using rule 27 (token)


state 28

   28 token: TOKEN_O_CURLY .

    $default  reduce using rule 28 (token)


state 29

   29 token: TOKEN_C_CURLY .

    $default  reduce using rule 29 (token)


state 30

   30 token: TOKEN_COMMA .

    $default  reduce using rule 30 (token)


state 31

   31 token: TOKEN_SEMICOLON .

    $default  reduce using rule 31 (token)


state 32

   32 token: TOKEN_NEWLINE .

    $default  reduce using rule 32 (token)


state 33

   33 token: TOKEN_CONST .

    $default  reduce using rule 33 (token)


state 34

   34 token: TOKEN_IF .

    $default  reduce using rule 34 (token)


state 35

   35 token: TOKEN_ELSE .

    $default  reduce using rule 35 (token)


state 36

   36 token: TOKEN_WHILE .

    $default  reduce using rule 36 (token)


state 37

    2 tokens: tokens token .

    $default  reduce using rule 2 (tokens)
